files/configs/ingress/templates/ingress-authserver-template.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: htpasswd
  name: htpasswd
  namespace: projectcontour-auth
spec:
  ports:
  - name: auth
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: htpasswd
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: htpasswd
  name: htpasswd
  namespace: projectcontour-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: htpasswd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: htpasswd
    spec:
      containers:
      - args:
        - htpasswd
        - --address=:9443
        - --tls-ca-path=/tls/ca.crt
        - --tls-cert-path=/tls/tls.crt
        - --tls-key-path=/tls/tls.key
        command:
        - /contour-authserver
        image: #@ image
        imagePullPolicy: IfNotPresent
        name: htpasswd
        ports:
        - containerPort: 9443
          name: auth
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 90Mi
        volumeMounts:
        - mountPath: /tls
          name: tls
          readOnly: true
      serviceAccountName: htpasswd
      volumes:
      - name: tls
        secret:
          secretName: htpasswd
